--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^7.1.0",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.13",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
